RESOLVED FIXED197214
URL set by document.open() is communicated with the WebPageProxy but not the WebFrameProxy
https://bugs.webkit.org/show_bug.cgi?id=197214
Summary URL set by document.open() is communicated with the WebPageProxy but not the ...
Chris Dumez
Reported 2019-04-23 15:10:58 PDT
URL set by document.open() is communicated with the WebPageProxy (since r244361) but not the WebFrameProxy.
Attachments
Patch (7.48 KB, patch)
2019-04-23 15:12 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-04-23 15:11:14 PDT
Chris Dumez
Comment 2 2019-04-23 15:12:36 PDT
Alex Christensen
Comment 3 2019-04-24 08:19:06 PDT
Comment on attachment 368069 [details] Patch I think I hit an assertion related to this.
Chris Dumez
Comment 4 2019-04-24 08:44:35 PDT
Comment on attachment 368069 [details] Patch Clearing flags on attachment: 368069 Committed r244590: <https://trac.webkit.org/changeset/244590>
Chris Dumez
Comment 5 2019-04-24 08:44:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.