URL set by document.open() is communicated with the WebPageProxy but not the WebFrameProxy https://bugs.webkit.org/show_bug.cgi?id=197214 <rdar://problem/49237544>

Reviewed by Alex Christensen.

Source/WebKit:

URL set by document.open() is communicated with the WebPageProxy (since r244361) but not the
WebFrameProxy. This patch fixes this.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _mainFrameURL]):
* UIProcess/API/Cocoa/WKWebViewPrivate.h:
* UIProcess/FrameLoadState.cpp:
(WebKit::FrameLoadState::didExplicitOpen):
* UIProcess/FrameLoadState.h:
* UIProcess/WebFrameProxy.cpp:
(WebKit::WebFrameProxy::didExplicitOpen):
* UIProcess/WebFrameProxy.h:
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didExplicitOpenForFrame):

Tools:

Extend API test coverage.

* TestWebKitAPI/Tests/WebKitCocoa/OpenAndCloseWindow.mm:
(TEST):

Canonical link: https://commits.webkit.org/211450@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244590 268f45cc-cd09-0410-ab3c-d52691b4dbfc