Tools/TestWebKitAPI/Tests/WebKitCocoa/OpenAndCloseWindow.mm
@@ -316,4 +316,6 @@ TEST(WebKit, OpenWindowThenDocumentOpen)
     // Both WebViews should have the same URL because of document.open().
     while (![[[openedWebView URL] absoluteString] isEqualToString:[[webView URL] absoluteString]])
         TestWebKitAPI::Util::sleep(0.1);
+
+    EXPECT_TRUE([[[openedWebView _mainFrameURL] absoluteString] isEqualToString:[[webView URL] absoluteString]]);
 }
